--- a/Proyecto-Final-Prog3/backend/package.json
+++ b/Proyecto-Final-Prog3/backend/package.json
@@ -11,27 +11,36 @@
     "test": "jest"
   },
   "dependencies": {
-    "express": "^4.18.2",
-    "sequelize": "^6.32.1",
-    "pg": "^8.11.0",
-    "pg-hstore": "^2.3.4",
-    "cors": "^2.8.5",
-    "helmet": "^7.0.0",
-    "dotenv": "^16.3.1",
     "bcryptjs": "^2.4.3",
-    "jsonwebtoken": "^9.0.1",
+    "cors": "^2.8.5",
+    "dotenv": "^16.5.0",
+    "express": "^4.18.2",
     "express-rate-limit": "^6.7.1",
     "express-validator": "^7.0.1",
+    "helmet": "^7.0.0",
+    "joi": "^17.13.3",
+    "jsonwebtoken": "^9.0.1",
     "morgan": "^1.10.0",
-    "redis": "^4.6.7"
+    "pg": "^8.16.1",
+    "pg-hstore": "^2.3.4",
+    "redis": "^4.6.7",
+    "sequelize": "^6.37.7"
   },
   "devDependencies": {
-    "nodemon": "^3.0.1",
-    "sequelize-cli": "^6.6.1",
     "jest": "^29.6.1",
+    "nodemon": "^3.0.1",
+    "sequelize-cli": "^6.6.3",
     "supertest": "^6.3.3"
   },
-  "keywords": ["express", "sequelize", "postgresql", "api"],
+  "keywords": [
+    "express",
+    "sequelize",
+    "postgresql",
+    "api"
+  ],
   "author": "Tu Nombre",
-  "license": "MIT"
+  "license": "MIT",
+  "directories": {
+    "test": "tests"
+  }
 }
